# Group5-VinBet

./: .gitignore  README.md  feature_columns.json  main.py  ohlcv.duckdb  optimize_alpha.py  params_tuned.json  pyproject.toml  test_ensemble.py  test_not_tuned.py  test_tuned.py  train_ensemble.py  tune_alpha.py
aightbet/: __init__.py  ensemble.py  features.py  model.py  processing.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
hyperparams/: params_not_tuned.json  params_tuned.json
hyperparams/ensemble_v1/: calibrators.pkl  cat_model.cbm  ensemble_config.json
live/: candles_builder.py  executor.py  features_engine.py  fix.py  order_trackers.py
models/ensemble_v1/: cat_model.cbm  lgbm_model.txt  xgb_model.json
vinbet/: backtest.py  config.py  db_postgres.py  ensemble.py  metrics.py  storage.py
wheels/: paperbroker_client-0.2.2-py3-none-any.whl  quickfix-1.15.1-cp313-cp313-win_amd64.whl
